# A3_Projet_Oxymetre

C/projetFINAL/: CMakeLists.txt  Makefile  affichage.c  affichage.h  fichiers.c  fir.c  fir.h  iir.c  iir.h  integration.c  integration.h  lecture.c  lecture.h  main.c  mesure.c  mesure.h  oxymetre
STM32/accelerometre/: .cproject  .mxproject  .project  accelerometre.ioc  accelerometre.launch
STM32/accelerometre/Core/Inc/: main.h
STM32/accelerometre/Core/Src/: main.c  stm32l1xx_hal_msp.c
STM32/accelerometre/Debug/: accelerometre.elf  accelerometre.list  accelerometre.map  makefile  objects.list
STM32/accelerometre/Debug/Core/Src/: main.d  main.su  stm32l1xx_hal_msp.su
STM32/accelerometre/Debug/Drivers/STM32L1xx_HAL_Driver/Src/: subdir.mk
STM32/day1/: ProjetSimu1.rar  echantillon courbe luminosité.csv  echantillon courbe luminosité.docx  echantillon courbe luminosité.xlsx
STM32/day1/ProjetSimu1/: .cproject  .mxproject  .project  ProjetSimu1 Debug.launch  ProjetSimu1save1 Debug.launch  ProjetSimu1save1.ioc
STM32/day1/ProjetSimu1/Core/Inc/: main.h  stm32l1xx_hal_conf.h
STM32/day1/ProjetSimu1/Core/Src/: main.c  stm32l1xx_hal_msp.c  stm32l1xx_it.c
STM32/day1/ProjetSimu1/Debug/: ProjetSimu1save1.elf  ProjetSimu1save1.list  ProjetSimu1save1.map  makefile  objects.list
STM32/day1/ProjetSimu1/Debug/Core/Src/: main.d  main.su
STM32/day1/ProjetSimu1/Debug/Drivers/STM32L1xx_HAL_Driver/Src/: subdir.mk
STM32/day2/: EMmain.c  main.c
